# comic-friend

./: .gitignore  README.md  pyproject.toml
arduino/: platformio.ini
arduino/src/: main.cpp
comic_friend/: main.py
